Fixing link bugs and contrast for description

--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ h3 > span {
 }
 .introInfo {
     width: 50vw;
-    background-color: rgba(87,87,235, 0.65);
+    background-color: rgba(4, 4, 49, 0.65);
     border-radius: 4px;
     margin-left: 25px;
     padding: 25px;
@@ -201,6 +201,9 @@ h3 > span {
     height: auto;
 }
 
+.stack:hover, header >h1:hover {
+    cursor: pointer;
+}
 .big {
     width: 100%;
     height: auto;  
